--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "farmaha",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://M-Farmaha.github.io/tt-oksi-fe/auth",
