--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "farmaha",
+  "name": "tt-oksi-fe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://M-Farmaha.github.io/TT-OKSI-FE/auth",
+  "homepage": "https://M-Farmaha.github.io/tt-oksi-fe/auth",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
