--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tt-oksi-fe",
+  "name": "english-quiz-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://M-Farmaha.github.io/tt-oksi-fe",
+  "homepage": "https://M-Farmaha.github.io/english-quiz-frontend",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
